    when compiling calls to Prolog built-in meta-predicates or Prolog module
    meta-predicates whose template includes a ":" meta-argument specifier.

    Improved compiler error checking for entity relations, detecting and
    reporting most incorrect attempts to extend, instantiate, specialize,
    import, implement, or complement the wrong kind of entities.

    Corrected a bug where the compilation (or dynamic creation) of parametric
    objects or parametric categories with instantiated parameters would fail
    to discard the parameter values in the runtime tables of defined entities.

    Added support for using explicit object qualification and explicit module
    qualification in meta_predicate/1 directives.

    Updated the implementation of the directives dynamic/1, discontiguous/1,
    and multifile/1 in order to remove explicit module qualification from the
    predicate indicator arguments when the module is "user".

    Updated the compilation of clause heads for module multifile predicates
    in order to remove the explicit module qualification when the module is
    "user".

    Updated the implementation of the built-in predicate logtalk_compile/2
    in order to ensure the same compiler options semantics for compiled code
    as the built-in predicate logtalk_load/2.

    Corrected a error handling issue in the implementation of the built-in
    predicates logtalk_compile/2 and logtalk_load/2 where the error terms
    would be wrapped in an extra error/2 term.

    Updated the Logtalk compiler in order to also delete the intermediate
    files generated by the back-end Prolog compilers when compiling the
    Prolog files generated by Logtalk with the "clean" flag is set to "on".

    Updated the built-in objects, "logtalk" and "debugger", and the built-in
    protocols, "expanding" and "monitoring", to support static binding.

    Updated the term-expansion mechanism implementation in order to support