@@ -839,7 +839,9 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>synchronized</code>" |</dd>
 			<dd>"<code>file(File, Path)</code>" |</dd>
 			<dd>"<code>lines(Start, End)</code>" |</dd>
-			<dd>"<code>events</code>"</dd>
+			<dd>"<code>events</code>" |</dd>
+			<dd>"<code>public(Predicates)</code>" |</dd>
+			<dd>"<code>parameter_names(Names)</code>"</dd>
 	</dl>
 	<dl id="grammar_object_property">
 		<dt>object_property ::=</dt>
@@ -853,7 +855,9 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>context_switching_calls</code>" |</dd>
 			<dd>"<code>dynamic_declarations</code>" |</dd>
 			<dd>"<code>events</code>" |</dd>
-			<dd>"<code>complements</code>"</dd>
+			<dd>"<code>complements</code>" |</dd>
+			<dd>"<code>public(Predicates)</code>" |</dd>
+			<dd>"<code>parameter_names(Names)</code>"</dd>
 	</dl>
 	<dl id="grammar_protocol_property">
 		<dt>protocol_property ::=</dt>
@@ -886,7 +890,7 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: September 4, 2010</span>
+		<span>Last updated on: November 19, 2010</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="index.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="index.html">next</a></span><br/>
