@@ -54,6 +54,9 @@ RELEASE NOTES
     reporting most incorrect attempts to extend, instantiate, specialize,
     import, implement, or complement the wrong kind of entities.
 
+    Added support for object and category properties parameter_names/1 and
+    public/1.
+
     Corrected a bug where the compilation (or dynamic creation) of parametric
     objects or parametric categories with instantiated parameters would fail
     to discard the parameter values in the runtime tables of defined entities.
